--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="#home">Home</a>
+                    <a class="nav-link" href="#carouselExampleIndicators">Home</a>
                     <a class="nav-link" href="#about">About</a>
                     <a class="nav-link" href="#teams">Teams</a>
                     <a class="nav-link" href="#gallery">Gallery</a>
